--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,28 +16,33 @@
   
   
    
-  <body ng-app="calc" ng-controller="calc" class="container">
+  <body ng-app="calc" ng-controller="calc" class="container" ng-init="load();">
    
     <div class="container" style="border: 1px solid">
+      
       <h1>Welcome to DNA sequence analyzer</h1><br><br><br>
     <div class="row">
       <div class="col-lg-3"></div>
        <div class="col-lg-6">
 
      <input id="seq" ng-model="seq" placeholder="Enter DNA sequence" required> <br><br><br>
-    
-    	<!-- <button class="btn btn-primary" ng-click="operation('+');">+</button>
-    	<button class="btn btn-primary" ng-click="operation('-');">-</button>
-    	<button class="btn btn-primary" ng-click="operation('*');">*</button>
-    	<button class="btn btn-primary" ng-click="operation('/');">/</button> <br><br><br>
-   				 
-	    <input id="num2" ng-model="num2" placeholder="Enter first operand" required><br><br><br> -->
-    
-		<input type="submit" value="analyze!" ng-click="calculate();"><br><br><br>
-	   <h1>Output : {{result}}</h1>
+    <input type="submit" value="analyze!" ng-click="calculate();"><br><br><br>
+    <h1>Output : </h1>
+      {{result}}
+    <h1>History</h1>
+     <table class="table table-hover">
+    <tr ng-repeat="x in history">
+                        
+                        
+                        <td class="col-sm-1 col-md-1" style="text-align: center">{{x.seq}}</td>
+                        <td class="col-sm-1 col-md-1 text-center"><strong>{{x.result}}</strong></td>
+                        
+    </tr>
+     <table class="table table-hover">
    </div>
 
    <div class="col-lg-3"></div>
+    
     
   </body>
 </html>
